# stream-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  openapi.json  pyproject.toml
src/stream_mcp/: __init__.py  auth.py  client.py  config.py  helpers.py  server.py
src/stream_mcp/models/: __init__.py  coupons.py  customers.py  invoices.py  payment_links.py  payments.py  products.py
src/stream_mcp/tools/: __init__.py  coupons.py  customers.py  docs.py  invoices.py  payment_links.py  payments.py  products.py
